@@ -78,5 +78,6 @@ setup(name='RosterUserTools',
                  'scripts/dnsrmreservedword', 'scripts/dnsrmusergroup',
                  'scripts/dnsrmview', 'scripts/dnsrmzone',
                  'scripts/dnsuphost', 'scripts/dnsupnamedglobals',
-                 'scripts/roster-user-tools-bootstrap']
+                 'scripts/roster-user-tools-bootstrap',
+                 'scripts/dnslsacl']
      )
